--- a/frontend/src/css/Reviews.css
+++ b/frontend/src/css/Reviews.css
@@ -1,13 +1,14 @@
 .Reviews-section {
-  background-color: #eef6f9; /* different from services */
+  background-color: rgb(33, 37, 41); /* different from services */
   text-align: center;
+  color:#fff;
   padding: 60px 20px;
 }
 
 .Reviews-section h2 {
   font-size: 2rem;
   margin-bottom: 40px;
-  color: #222;
+  color: white;
 }
 
 .Reviews-container {
@@ -33,8 +34,7 @@
 
 .review-box h3 {
   font-size: 1.4rem;
-  color:rgb(59, 59, 199);
-  text-shadow:0 0 1px black;
+  color:#fc7a00;
   margin-top: 10px;
 }
 
