--- a/frontend/src/css/services.css
+++ b/frontend/src/css/services.css
@@ -1,11 +1,12 @@
 .Services-section{
     text-align: center;
     padding:30px 20px;
-    background-color: #f0f8ff;
+    background-color:rgb(33, 37, 41);
 }
 .Services-section h2{
         margin:20px;
         font-size:2rem;
+        color: #fff;
 }
 .Services-container{
     display: flex;
@@ -17,6 +18,7 @@
     background-color: white;
     max-width: 250px;
     box-shadow: 0 0 10px black;
+    color:black;
     padding:20px;
     display: flex;
     flex-direction: column;
@@ -33,6 +35,6 @@
 .service-box:hover {
     transform: translateY(-3px);
     box-shadow: 0 0 20px black;
-    background-color:rgb(208, 250, 252);
+    background-color:rgb(248, 232, 186);
     cursor: pointer;
 }
