--- a/frontend/src/css/Reviews.css
+++ b/frontend/src/css/Reviews.css
@@ -1,9 +1,5 @@
 .Reviews-section {
-<<<<<<< HEAD
-  background-color: #eef6f9;
-=======
-  background-color: rgb(33, 37, 41); /* different from services */
->>>>>>> job_portal
+  /* background-color: rgb(33, 37, 41); different from services */
   text-align: center;
   color:#fff;
   padding: 60px 20px;
@@ -40,12 +36,7 @@
 
 .review-box h3 {
   font-size: 1.4rem;
-<<<<<<< HEAD
-  color: rgb(59, 59, 199);
-  text-shadow: 0 0 1px black;
-=======
   color:#fc7a00;
->>>>>>> job_portal
   margin-top: 10px;
 }
 
