--- a/frontend/src/css/Hr/sidebar.css
+++ b/frontend/src/css/Hr/sidebar.css
@@ -2,12 +2,12 @@
 .sidebar {
   width: 220px;
   background-color: rgb(33, 37, 41);
-  color: black;
+  color: white;
   height: 100vh;
   position: fixed;
   top: 0;
   left: 0;
-  padding: 20px;
+  padding:100px 20px;
   transition: all 0.3s ease;
   z-index: 200;
   border:5px solid orange;
@@ -28,7 +28,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 20px;
+  margin:5px 10px 50px 10px;
 }
 
 /* Menu list */
@@ -39,7 +39,7 @@
 }
 
 .sidebar-menu li {
-  margin: 10px 0;
+  margin: 25px 0;
 }
 
 /* Links */
