--- a/frontend/src/css/Hr/sidebar.css
+++ b/frontend/src/css/Hr/sidebar.css
@@ -1,7 +1,7 @@
 /* Sidebar container */
 .sidebar {
   width: 260px;
-  background: #1f2233;
+  background: rgb(33, 37, 41);
   color: #e9e9f1;
   display: flex;
   flex-direction: column;
